# rust-for-rag-llm-agent

./: .gitignore  Makefile  README.md  main.py  requirements.txt
config/: logging.yaml  orchestration.py  paths.py  pipeline_context.py  settings.py
docs/: mkdocs.yml
docs/docs/: index.md
prompts/inputs/: input_prompts.json  prompt_template.txt
prompts/outputs/: generated-answers.json  generated-answers_p1_s12.json
reports/results/: generated-answers.json
rust_mods/chunk_embedder/: Cargo.toml
rust_mods/chunk_embedder/src/: config.rs  lib.rs  main.rs  pipeline.rs
rust_mods/chunk_embedder/src/embeddings/: data_structures.rs  embed.rs  mod.rs
rust_mods/chunk_embedder/src/indexing/: build_idx.rs  mod.rs
rust_mods/chunk_embedder/src/my_utils/: file_access.rs
rust_mods/doc_loader/: Cargo.toml
rust_mods/doc_loader/src/: lib.rs  main.rs  pipeline.rs
rust_mods/doc_loader/src/data/: load_docs.rs  mod.rs
rust_mods/doc_loader/src/utils/: file_access.rs
src/core/: base_pipeline.py  types.py
src/core/data_handling/: data_module.py  data_module_handler.py  lazy_load.py
src/core/step_handling/: step_definition.py  step_executor.py  step_handler.py  (+2 more)
src/data/: chunk.py  doc_loader.py  embed_wrapper.py  process.py
src/models/: faiss_store.py  llm.py  response_generator.py  retrieval_builder.py
src/pipelines/: data_pipeline.py  vector_pipeline.py
src/rag/: dashboard.py  document_handler.py  memory_retrieval.py  rag_invoke.py  rag_system.py  response_handler.py
utils/: debug_runnable.py  file_access.py  logging_config.py  logging_utils.py
(+26 files in other folders)
