[package]
name = "rust_chunk_embedder"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_chunk_embedder"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.7"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.2.0"
serde_json = "1.0"
rust-bert = "0.23.0"
tch = "0.17.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
