[package]
name = "rust_doc_loader"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_doc_loader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
lopdf = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.2.0"
pdf-extract = "0.8.2"
env_logger = "0.11.7"
log = "0.4.27"
